# Robot_Palletizer

src/detector/: CMakeLists.txt  package.xml
src/detector/config/: detector_config.yaml
src/detector/launch/: detector.launch
src/detector/msg/: BoundingBox.msg  BoundingBoxes.msg
src/detector/scripts/: detector_node.py
src/detector/scripts/detectors/: base_detector.py  yolo_detector.py
src/object_detection/: CMakeLists.txt  package.xml  setup.py
src/object_detection/config/: object_detection_config.yaml
src/object_detection/launch/: object_detection.launch  wpb_simple.launch
src/object_detection/msg/: DetectionObject.msg  DetectionObjects.msg  DetectionPoint.msg  DetectionPointArray.msg
src/object_detection/object_detection/: config.py  detector.py  visualize.py
src/object_detection/object_detection/cli/: detect_ros.py
src/object_detection/object_detection/detectors/: base.py  yolo.py
src/object_detection/scripts/: detect_ros.py
src/object_detection/src/: object_detection_node.cpp
src/task_planning/: CMakeLists.txt  README.md  package.xml
src/task_planning/config/: task_planning_config.yaml  task_planning_params.yaml
src/task_planning/launch/: task_planning.launch
src/task_planning/msg/: TaskCommand.msg  TaskResult.msg
src/task_planning/scripts/: task_planning_node.py
src/task_planning/src/: task_planning_node.cpp
train/: data.yaml  train.py
train/runs/blocks/: args.yaml
train/runs/blocks-2/: args.yaml
train/runs/blocks-3/: args.yaml
