<?xml version="1.0"?>
<package format="2">
  <name>task_planning</name>
  <version>0.0.1</version>
  <description>Task planning module between object_detection and motion_control</description>

  <maintainer email="23371480@buaa.edu.cn">xizheTang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_core</build_depend>
  <build_depend>object_detection</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robot_core</build_export_depend>
  <build_export_depend>object_detection</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_core</exec_depend>
  <exec_depend>object_detection</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export />
</package>
